# batrun

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  batrun  batrun.fish  batrun.py  batrun.rs  pyproject.toml  run_test.rs
cli/: Cargo.toml
cli/src/: main.rs
include/: ansi  logging
src/: error.rs  execution_strategy.rs  lib.rs  main.rs  reporter.rs  settings.rs  simple_executor.rs  test_driver.rs  test_executor.rs  test_runner.rs  test_suite.rs  time.rs
src/reporter/: human_friendly.rs  json.rs  logging.rs  null.rs
src/test_driver/: bash.rs
src/test_executor/: parallel.rs  round_robin.rs  sequential.rs
src/test_executor/utils/: mod.rs  simple_executor.rs
src/test_suite/: config.rs  registry.rs  status.rs  visitor.rs
tests/: test-suite.json  tests.sh
tests/00-testing/: 01-basic test.sh
tests/ivts/: test-suite.json
tests/ivts-setup-failed/: fixture.sh  test-suite.json
tests/ivts-setup-failed/01-ivts/: 01-test.sh  02-test.sh
tests/ivts-short-tc-names/: a.sh  test-suite.json
tests/ivts/01-ivts/: 00-basic test.sh  04-skipped-incompatible-device.sh  06-no-setup.sh  07-no-teardown.sh  20-setup-failed.sh  21-teardown-failed.sh  30-skipped-incompatible-device.sh  31-unkown-output-envvar.sh
