[project]
name = "batrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julien Combattelli", email = "julien.combattelli@ampere.cars" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
batrun = "batrun:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
